# tnt-python

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
tests/: test_404_response.py  test_send_document.py  test_send_message.py
tnt_python/: data.py  enums.py  file_creator.py  services.py  types.py  utils.py
